[package]
description = "Rust wrapper for Pinnacle Sports API"
edition = "2021"
license = "MIT"
name = "pinnacle"
repository = "https://github.com/imbolc/pinnacle"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies]
rusty-hook = "0.11"
