[package]
description = "Rust wrapper for Pinnacle Sports API"
edition = "2021"
license = "MIT"
name = "pinnacle"
repository = "https://github.com/imbolc/pinnacle"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_urlencoded = "0.7.1"

[dev-dependencies]
anyhow = "1.0.70"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
rusty-hook = "0.11"
tokio = { version = "1", features = ["full"] }
